# wakeword_pico

./: .gitmodules
inference-app/: CMakeLists.txt
inference-app/src/: audio_provider.cc  audio_provider.h  command_responder.cc  command_responder.cpp  command_responder.h  feature_provider.cc  feature_provider.h  main.cpp  main_functions.cpp  ml_model.cpp  ml_model.h  on-off-model.cpp  pdm_audio_provider.cpp  recognize_commands.cc  recognize_commands.h
